--- a/public/index.html
+++ b/public/index.html
@@ -11,56 +11,7 @@
     </style>
 </head>
 <body>
-    <div id="app">
-        <div id="header-container">
-            <div id="title">
-                <h1>
-                    Strangers' Things
-                </h1>
-                <h5>
-                    Shop & Sell with our Digital Marketplace
-                </h5>
-            </div>
-            <div id="nav-bar-container">
-                <div id="nav-button">
-                    <h3>
-                        List an item
-                    </h3>
-                </div>
-                <div id="nav-button">
-                    <h3>
-                        Log in
-                    </h3>
-                </div>
-                <div id="nav-button">
-                    <h3>
-                        Log out
-                    </h3>
-                </div>
-            </div>
-        </div>
-        <div id="post-container">
-            <div id="posts">
-                <h3>
-                    Current Listings
-                </h3>
-                <h5>
-                    Shop the marketplace
-                </h5>
-                <form>
-        
-                </form>
-            </div>
-            <div id="new-posts">
-                <h3>
-                    Create a new listing
-                </h3>
-                <form>
-        
-                </form>
-            </div>
-        </div>
-    </div>
+    <div id="app"></div>
 </body>
 <script src="../src/index.js"></script>
 </html>
